# MCP-Tool-Card-Linter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PROTOCOL_COMPATIBILITY.md  QUALITY_SELF_CHECK.md  RELEASE_VERIFICATION.md  RESEARCH_NOTES.md  RULE_ACCURACY.md  STABILITY_POLICY.md  SUPPORT_BOUNDARIES.md  TEST_REPORT.md  THREAT_MODEL.md  sample-bad-report.json  sample-bad-report.md
evaluation/: rule_accuracy_v1.jsonl
examples/: bad-tools.json  good-tools.json  mcp.json  policy.toml
src/mcp_tool_card_linter/: __init__.py  audit.py  auth.py  cli.py  contracts.py  discovery.py  evaluation.py  execution.py  lint.py  models.py  oauth.py  policy.py  reporting.py  rules.py  security.py  trust.py
src/mcp_tool_card_linter/schemas/: audit.schema.json  baseline.schema.json  report.schema.json
tests/conformance/: client.py  package-lock.json  package.json
tests/fixtures/: adversarial_mcp_stdio_server.py  bad_tools.json  good_tools.json  mock_mcp_stdio_server.py
tests/fuzz/: __init__.py  test_fuzz_v1.py
tests/integration/: test_baseline_cli_v05.py  test_cli_file.py  test_http_client.py  test_http_security.py  test_oauth_pkce.py  test_stdio_client.py  test_stdio_security.py  test_streamable_http_v04.py  test_v1_contract_cli.py
tests/mutation/: __init__.py  test_rule_mutations_v1.py
tests/system/: test_end_to_end_config.py  test_oauth_cli_workflow.py  test_performance_budget.py  test_security_workflows.py  test_soak_v1.py  test_v05_secure_workflow.py
tests/unit/: test_auth.py  test_contracts_v1.py  test_discovery_security.py  test_discovery_static.py  test_dns_pinning_v05.py  test_execution_v05.py  test_lint_protocol_extensions.py  test_lint_rules.py  test_lint_security.py  test_oauth.py  test_policy.py  test_reporting_contracts.py  test_reporting_security.py  test_security_primitives.py  test_trust_v05.py
